[gd_scene load_steps=18 format=3 uid="uid://to67e7w8jjnf"]

[ext_resource type="Script" path="res://scripts/ui/level_select.gd" id="1_leohb"]
[ext_resource type="Texture2D" uid="uid://bkijm7u3o5bb1" path="res://sprites/background.png" id="2_av1m3"]
[ext_resource type="PackedScene" uid="uid://4qa7wvvag0c1" path="res://scenes/ground.tscn" id="3_1w21u"]
[ext_resource type="Texture2D" uid="uid://bjst5yvj0ub62" path="res://sprites/difficulty_faces/easy.png" id="4_nibd7"]
[ext_resource type="Theme" uid="uid://bix6o75fprlk6" path="res://themes/progress_bar.tres" id="5_5lvsn"]
[ext_resource type="Texture2D" uid="uid://cqlhre6us7oi7" path="res://sprites/coin/dark/coin_dark.png" id="6_ypg5a"]
[ext_resource type="Texture2D" uid="uid://dnd738p2t0ll" path="res://sprites/difficulty_faces/normal.png" id="7_5ub8w"]
[ext_resource type="Texture2D" uid="uid://lytkqsg1g6rb" path="res://sprites/difficulty_faces/hard.png" id="8_tjcfc"]
[ext_resource type="Texture2D" uid="uid://cnphxvgtloyxr" path="res://sprites/difficulty_faces/harder.png" id="9_1kd3i"]
[ext_resource type="Texture2D" uid="uid://bidy35fp5cyg2" path="res://sprites/difficulty_faces/insane.png" id="10_ticj7"]
[ext_resource type="Texture2D" uid="uid://bvi4n6gtdafq8" path="res://sprites/UI/arrow.png" id="11_k17r5"]
[ext_resource type="PackedScene" uid="uid://bgykhy84bbrly" path="res://scenes/ui/fade_screen.tscn" id="12_20a8c"]
[ext_resource type="AudioStream" uid="uid://dx5ipukmfj1dp" path="res://audio/sfx/confirm.wav" id="13_usgtr"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_eetr5"]
bg_color = Color(1, 1, 1, 1)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_mkpgq"]
bg_color = Color(0, 0, 0, 0.588235)
corner_radius_top_left = 10
corner_radius_top_right = 10
corner_radius_bottom_right = 10
corner_radius_bottom_left = 10

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_fv18j"]
bg_color = Color(0, 0, 0, 0.588235)
corner_radius_top_left = 10
corner_radius_top_right = 10
corner_radius_bottom_right = 10
corner_radius_bottom_left = 10

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_praf4"]
bg_color = Color(0, 0, 0, 0.588235)
corner_radius_top_left = 10
corner_radius_top_right = 10
corner_radius_bottom_right = 10
corner_radius_bottom_left = 10

[node name="LevelSelect" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_leohb")

[node name="Background" type="Panel" parent="."]
layout_mode = 0
offset_right = 320.0
offset_bottom = 180.0
theme_override_styles/panel = SubResource("StyleBoxFlat_eetr5")

[node name="Background2" type="Sprite2D" parent="Background"]
position = Vector2(39, 118)
scale = Vector2(2, 2)
texture = ExtResource("2_av1m3")

[node name="Background3" type="Sprite2D" parent="Background"]
position = Vector2(167, 118)
scale = Vector2(2, 2)
texture = ExtResource("2_av1m3")

[node name="Background4" type="Sprite2D" parent="Background"]
position = Vector2(295, 118)
scale = Vector2(2, 2)
texture = ExtResource("2_av1m3")

[node name="Background5" type="Sprite2D" parent="Background"]
position = Vector2(39, -10)
scale = Vector2(2, 2)
texture = ExtResource("2_av1m3")

[node name="Background6" type="Sprite2D" parent="Background"]
position = Vector2(167, -10)
scale = Vector2(2, 2)
texture = ExtResource("2_av1m3")

[node name="Background7" type="Sprite2D" parent="Background"]
position = Vector2(295, -10)
scale = Vector2(2, 2)
texture = ExtResource("2_av1m3")

[node name="Ground" parent="Background" instance=ExtResource("3_1w21u")]
position = Vector2(50, 180)
scale = Vector2(2.1, 2.1)

[node name="Levels" type="Control" parent="."]
anchors_preset = 0
offset_right = 40.0
offset_bottom = 40.0

[node name="Level1" type="Panel" parent="Levels"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = 50.0
offset_top = 35.0
offset_right = 230.0
offset_bottom = 85.0
grow_horizontal = 2
grow_vertical = 2
theme_override_styles/panel = SubResource("StyleBoxFlat_mkpgq")

[node name="Difficulty" type="Sprite2D" parent="Levels/Level1"]
position = Vector2(26, 25)
scale = Vector2(1.5, 1.5)
texture = ExtResource("4_nibd7")

[node name="LevelName" type="Label" parent="Levels/Level1"]
layout_mode = 0
offset_left = 43.0
offset_top = 13.0
offset_right = 167.0
offset_bottom = 36.0
theme_override_font_sizes/font_size = 15
text = "Musical Madness"
horizontal_alignment = 1
vertical_alignment = 1

[node name="ProgressBar" type="ProgressBar" parent="Levels/Level1"]
layout_mode = 0
offset_left = 10.0
offset_top = 55.0
offset_right = 170.0
offset_bottom = 73.0
theme = ExtResource("5_5lvsn")
theme_override_font_sizes/font_size = 8

[node name="Button" type="Button" parent="Levels/Level1"]
modulate = Color(1, 1, 1, 0)
layout_mode = 0
offset_right = 180.0
offset_bottom = 50.0

[node name="Coin" type="Sprite2D" parent="Levels/Level1"]
position = Vector2(168, 10)
texture = ExtResource("6_ypg5a")

[node name="Level2" type="Panel" parent="Levels"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = 370.0
offset_top = 35.0
offset_right = 550.0
offset_bottom = 85.0
grow_horizontal = 2
grow_vertical = 2
theme_override_styles/panel = SubResource("StyleBoxFlat_fv18j")

[node name="Difficulty" type="Sprite2D" parent="Levels/Level2"]
position = Vector2(26, 25)
scale = Vector2(1.5, 1.5)
texture = ExtResource("7_5ub8w")

[node name="LevelName" type="Label" parent="Levels/Level2"]
layout_mode = 0
offset_left = 50.0
offset_top = 13.0
offset_right = 156.0
offset_bottom = 36.0
text = "Back To Back"
horizontal_alignment = 1

[node name="ProgressBar" type="ProgressBar" parent="Levels/Level2"]
layout_mode = 0
offset_left = 10.0
offset_top = 55.0
offset_right = 170.0
offset_bottom = 73.0
theme = ExtResource("5_5lvsn")
theme_override_font_sizes/font_size = 8

[node name="Button" type="Button" parent="Levels/Level2"]
modulate = Color(1, 1, 1, 0)
layout_mode = 0
offset_right = 180.0
offset_bottom = 50.0

[node name="Coin" type="Sprite2D" parent="Levels/Level2"]
position = Vector2(168, 10)
texture = ExtResource("6_ypg5a")

[node name="Level3" type="Panel" parent="Levels"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = 690.0
offset_top = 35.0
offset_right = 870.0
offset_bottom = 85.0
grow_horizontal = 2
grow_vertical = 2
theme_override_styles/panel = SubResource("StyleBoxFlat_praf4")

[node name="Difficulty" type="Sprite2D" parent="Levels/Level3"]
position = Vector2(26, 25)
scale = Vector2(1.5, 1.5)
texture = ExtResource("8_tjcfc")

[node name="LevelName" type="Label" parent="Levels/Level3"]
layout_mode = 0
offset_left = 50.0
offset_top = 13.0
offset_right = 156.0
offset_bottom = 36.0
text = "Polarghost"
horizontal_alignment = 1

[node name="ProgressBar" type="ProgressBar" parent="Levels/Level3"]
layout_mode = 0
offset_left = 10.0
offset_top = 55.0
offset_right = 170.0
offset_bottom = 73.0
theme = ExtResource("5_5lvsn")
theme_override_font_sizes/font_size = 8

[node name="Button" type="Button" parent="Levels/Level3"]
modulate = Color(1, 1, 1, 0)
layout_mode = 0
offset_right = 180.0
offset_bottom = 50.0

[node name="Coin" type="Sprite2D" parent="Levels/Level3"]
position = Vector2(168, 10)
texture = ExtResource("6_ypg5a")

[node name="Level4" type="Panel" parent="Levels"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = 1010.0
offset_top = 35.0
offset_right = 1190.0
offset_bottom = 85.0
grow_horizontal = 2
grow_vertical = 2
theme_override_styles/panel = SubResource("StyleBoxFlat_praf4")

[node name="Difficulty" type="Sprite2D" parent="Levels/Level4"]
position = Vector2(26, 25)
scale = Vector2(1.5, 1.5)
texture = ExtResource("9_1kd3i")

[node name="LevelName" type="Label" parent="Levels/Level4"]
layout_mode = 0
offset_left = 50.0
offset_top = 13.0
offset_right = 156.0
offset_bottom = 36.0
text = "Burn out"
horizontal_alignment = 1

[node name="ProgressBar" type="ProgressBar" parent="Levels/Level4"]
layout_mode = 0
offset_left = 10.0
offset_top = 55.0
offset_right = 170.0
offset_bottom = 73.0
theme = ExtResource("5_5lvsn")
theme_override_font_sizes/font_size = 8

[node name="Button" type="Button" parent="Levels/Level4"]
modulate = Color(1, 1, 1, 0)
layout_mode = 0
offset_right = 180.0
offset_bottom = 50.0

[node name="Coin" type="Sprite2D" parent="Levels/Level4"]
position = Vector2(168, 10)
texture = ExtResource("6_ypg5a")

[node name="Level5" type="Panel" parent="Levels"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = 1330.0
offset_top = 35.0
offset_right = 1510.0
offset_bottom = 85.0
grow_horizontal = 2
grow_vertical = 2
theme_override_styles/panel = SubResource("StyleBoxFlat_praf4")

[node name="Difficulty" type="Sprite2D" parent="Levels/Level5"]
position = Vector2(26, 25)
scale = Vector2(1.5, 1.5)
texture = ExtResource("10_ticj7")

[node name="LevelName" type="Label" parent="Levels/Level5"]
layout_mode = 0
offset_left = 50.0
offset_top = 13.0
offset_right = 156.0
offset_bottom = 36.0
text = "Jumpman"
horizontal_alignment = 1

[node name="ProgressBar" type="ProgressBar" parent="Levels/Level5"]
layout_mode = 0
offset_left = 10.0
offset_top = 55.0
offset_right = 170.0
offset_bottom = 73.0
theme = ExtResource("5_5lvsn")
theme_override_font_sizes/font_size = 8

[node name="Button" type="Button" parent="Levels/Level5"]
modulate = Color(1, 1, 1, 0)
layout_mode = 0
offset_right = 180.0
offset_bottom = 50.0

[node name="Coin" type="Sprite2D" parent="Levels/Level5"]
position = Vector2(168, 10)
texture = ExtResource("6_ypg5a")

[node name="ButtonRight" type="Button" parent="."]
layout_mode = 0
offset_left = 279.0
offset_top = 78.0
offset_right = 303.0
offset_bottom = 102.0
theme = ExtResource("5_5lvsn")
icon = ExtResource("11_k17r5")
flat = true

[node name="ButtonLeft" type="Button" parent="."]
layout_mode = 0
offset_left = 39.0
offset_top = 78.0
offset_right = 63.0
offset_bottom = 102.0
scale = Vector2(-1, 1)
theme = ExtResource("5_5lvsn")
icon = ExtResource("11_k17r5")
flat = true

[node name="BackButton" type="Button" parent="."]
layout_mode = 0
offset_left = 24.0
offset_top = 24.0
offset_right = 48.0
offset_bottom = 48.0
scale = Vector2(-1, -1)
theme = ExtResource("5_5lvsn")
icon = ExtResource("11_k17r5")
flat = true

[node name="FadeScreen" parent="." instance=ExtResource("12_20a8c")]
layout_mode = 1
mouse_filter = 2

[node name="AudioStreamPlayer2D" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("13_usgtr")

[connection signal="pressed" from="Levels/Level1/Button" to="." method="_on_button_pressed"]
[connection signal="pressed" from="Levels/Level2/Button" to="." method="_on_button_pressed"]
[connection signal="pressed" from="Levels/Level3/Button" to="." method="_on_button_pressed"]
[connection signal="pressed" from="Levels/Level4/Button" to="." method="_on_button_pressed"]
[connection signal="pressed" from="Levels/Level5/Button" to="." method="_on_button_pressed"]
[connection signal="pressed" from="ButtonRight" to="." method="_on_button_right_pressed"]
[connection signal="pressed" from="ButtonLeft" to="." method="_on_button_left_pressed"]
[connection signal="pressed" from="BackButton" to="." method="_on_back_button_pressed"]
